improved menu UI

--- a/Project/html/about.html
+++ b/Project/html/about.html
@@ -26,9 +26,9 @@
         
         <div class="submenu">
           <ul>
-          <li><a style="border-right:solid black 1px" href="/Project/html/home page.html">HOME</a></li>
+          <li><a style="border-right:solid black 1px" href="/Project/html/home_page.html">HOME</a></li>
               <li><a style="border-right:solid black 1px" href="/Project/html/menu.html">MENU</a></li>
-              <li><a style="border-right:solid black 1px" href="/Project/html/home page.html#book">RESERVATION</a></li>
+              <li><a style="border-right:solid black 1px" href="/Project/html/home_page.html#book">RESERVATION</a></li>
               <li><a style="border-right:solid black 1px" href="/Project/html/maps.html" >MAPS</a></li>
               <li><a style="border-right:solid black 1px" href="/Project/html/about.html">ABOUT US</a></li>
           </ul>
@@ -51,9 +51,9 @@
                     <h6 class="a">Quick Links</h6>
                     <ul class="footer-links">
                       <li><a href="about.html">About Us</a></li>
-                      <li><a href="home page.html">Home</a></li>
+                      <li><a href="home_page.html">Home</a></li>
                       <li><a href="menu.html">Menu</a></li>
-                      <li><a href="home page.html#book">Reservation</a></li>
+                      <li><a href="home_page.html#book">Reservation</a></li>
                       <li><a href="maps.html">Maps</a></li>
                     </ul>
                   </div>
