--- a/Project/html/home_page.html
+++ b/Project/html/home_page.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  
-        <link rel="stylesheet" href="main.css" >
+        <link rel="stylesheet" href="/Project/css/main.css" >
         <style>
             h2{text-shadow: 1px 1px black;}
         </style>
@@ -13,14 +13,14 @@
     </head>
     <body>
         <div class="main2" ><center><h3>READY, SET, BANQUET!</h3></center></div>
-        <div class="main2"><img src="logo.PNG" style="float:left;width:5%;height:5%"><center><h1>READY, SET, BANQUET!</h1></center></div>
+        <div class="main2"><img src="/Project/images/logo.PNG" style="float:left;width:5%;height:5%"><center><h1>READY, SET, BANQUET!</h1></center></div>
         <br>
         
         <div class="submenu">
             <ul>
-            <li><a style="border-right:solid black 1px" href="home page.html">HOME</a></li>
+            <li><a style="border-right:solid black 1px" href="home_page.html">HOME</a></li>
                 <li><a style="border-right:solid black 1px" href="menu.html">MENU</a></li>
-                <li><a style="border-right:solid black 1px" href="home page.html#book">RESERVATION</a></li>
+                <li><a style="border-right:solid black 1px" href="home_page.html#book">RESERVATION</a></li>
                 <li><a style="border-right:solid black 1px" href="maps.html" >MAPS</a></li>
                 <li><a style="border-right:solid black 1px" href="about.html">ABOUT US</a></li>
             </ul>
@@ -100,10 +100,10 @@
                 <div class="sub">
                     <br><BR>
                     <div style="grid-column-start:1; grid-column-end: 4;"><center><H1 style="color:rgb(0, 0, 34);"><b><u style="text-decoration-color:rgb(129, 74, 21); text-decoration-thickness: 5px;">Our Popular Cuisines</u></b></H1></center><br></div>
-                    <div class="two"><a href="menu.html#chinese" ><img src="noodles.jpg" style="width:400px;"><br><h3>CHINESE Food</h3><p>Chinese food is a term that talks about the food that comes from all over China and the cuisine of China. It is an important part of Chinese culture. This food comes from many different parts of China and also the food made by Overseas Chinese that live in other parts of the world.Chinese people in general are not as concerned about nutrition as Western culture. They are more concerned with the food's texture, flavor, color, and aroma. These are the crucial points for good Chinese cooking. Chinese daily meals consist of four food groups: grains, vegetables, fruit, and meat.</p></a></div>
-                    <div class="two"><a href="menu.html#italian"><img src="pizza.jpg" style="width:400px;"><br><h3>ITALIAN Food</h3><p>Italian cuisine is a Mediterranean cuisine consisting of the ingredients, recipes and cooking techniques developed across the Italian Peninsula since antiquity, and later spread around the world together with waves of Italian diasporaItalian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine, Italian cooking can best be described as a celebration of local flavors held together by a singular appreciation of high-quality, seasonal ingredients, presented in elegant simplicity.</p></a></div>
-                    <div class="two"><a href="menu.html#dessert"><img src="blvt.jpg" style="width:400px;"><br><h3>DESSERTS</h3><p> Dessert is usually sweet course or dish (as of pastry or ice cream) usually served at the end of a meal.It is a course that concludes a meal. The course consists of sweet foods, such as confections, and possibly a beverage such as dessert wine and liqueur. In some parts of the world, such as much of Greece and West Africa, and most parts of China, there is no tradition of a dessert course to conclude a meal.</p></a></div>
-                    <div style="grid-column-start:1; grid-column-end:4;background-image:url('banner.png');height:350px">  
+                    <div class="two"><a href="menu.html#chinese" ><img src="/Project/images/noodles.jpg" style="width:400px;"><br><h3>CHINESE Food</h3><p>Chinese food is a term that talks about the food that comes from all over China and the cuisine of China. It is an important part of Chinese culture. This food comes from many different parts of China and also the food made by Overseas Chinese that live in other parts of the world.Chinese people in general are not as concerned about nutrition as Western culture. They are more concerned with the food's texture, flavor, color, and aroma. These are the crucial points for good Chinese cooking. Chinese daily meals consist of four food groups: grains, vegetables, fruit, and meat.</p></a></div>
+                    <div class="two"><a href="menu.html#italian"><img src="/Project/images/pizza.jpg" style="width:400px;"><br><h3>ITALIAN Food</h3><p>Italian cuisine is a Mediterranean cuisine consisting of the ingredients, recipes and cooking techniques developed across the Italian Peninsula since antiquity, and later spread around the world together with waves of Italian diasporaItalian food is always a matter of regional pride. But if one were to try and sum up this diverse cuisine, Italian cooking can best be described as a celebration of local flavors held together by a singular appreciation of high-quality, seasonal ingredients, presented in elegant simplicity.</p></a></div>
+                    <div class="two"><a href="menu.html#dessert"><img src="/Project/images/blvt.jpg" style="width:400px;"><br><h3>DESSERTS</h3><p> Dessert is usually sweet course or dish (as of pastry or ice cream) usually served at the end of a meal.It is a course that concludes a meal. The course consists of sweet foods, such as confections, and possibly a beverage such as dessert wine and liqueur. In some parts of the world, such as much of Greece and West Africa, and most parts of China, there is no tradition of a dessert course to conclude a meal.</p></a></div>
+                    <div style="grid-column-start:1; grid-column-end:4;background-image:url('/Project/images/banner.png');height:350px">  
                 </div>
                 <br><br><br>
                 
@@ -162,9 +162,9 @@
                       <h6 class="a">Quick Links</h6>
                       <ul class="footer-links">
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="home page.html">Home</a></li>
+                        <li><a href="home_page.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
-                        <li><a href="home page.html#book">Reservation</a></li>
+                        <li><a href="home_page.html#book">Reservation</a></li>
                         <li><a href="maps.html">Maps</a></li>
                       </ul>
                     </div>
